--- a/styles/global/_mixin.scss
+++ b/styles/global/_mixin.scss
@@ -53,7 +53,6 @@
 
 // heart fill after
 @mixin heart-fill-after($color1: $primary, $color2: $secondary) {
-	position: relative;
 	cursor: pointer;
 
 	&::after {
